--- a/app/views/edgarj/popup/message_popup.js.erb
+++ b/app/views/edgarj/popup/message_popup.js.erb
@@ -1,1 +1,3 @@
-../edgarj/message_popup.js.erb
+$('#edgarj_message_popup').html("<%= j(render 'message_popup') %>");
+$('#edgarj_message_popup').dialog('open');
+
