Edgarj::Drawer::Popup no longer require URL-route to show an record.
Also, move 'data-url' HTML attribute from column to row

--- a/app/views/edgarj/edgarj/_list.html.erb
+++ b/app/views/edgarj/edgarj/_list.html.erb
@@ -45,7 +45,7 @@
   
     /* show detail on clicking a list row */
     $('._edgarj_list_column').click(function(){
-      $.ajax($(this).attr('data-url'));
+      $.ajax($(this).closest('.edgarj_row').attr('data-url'));
     });
   });
   <% end %>
