--- a/app/views/edgarj/popup/index.js.erb
+++ b/app/views/edgarj/popup/index.js.erb
@@ -1,4 +1,6 @@
 $('#edgarj_form_popup').html("<%= j(render 'index') %>");
 $('#edgarj_form_popup').dialog('option', 'title',
     '<%= params[:title] || title || t('edgarj.form.popup.title') % model_label %>');
-$('#edgarj_form_popup').dialog('open');
+$('#edgarj_form_popup').
+    dialog('open').
+    dialog('option', 'width',   'auto');
